--- a/sass/holly_grail.css
+++ b/sass/holly_grail.css
@@ -1,14 +1,14 @@
-/* line 1, C:/Users/karryd/Google Drive/webutv2_te14/flexbox/sass/holly_grail.sass */
+/* line 1, C:/Users/kroan_000/Desktop/Webbutveckling 2/holly_grail/sass/holly_grail.sass */
 body {
   background: #555; }
 
-/* line 5, C:/Users/karryd/Google Drive/webutv2_te14/flexbox/sass/holly_grail.sass */
+/* line 5, C:/Users/kroan_000/Desktop/Webbutveckling 2/holly_grail/sass/holly_grail.sass */
 .kontainer header {
   background: orange;
   height: 100px;
   padding: 20px; }
 
-/* line 10, C:/Users/karryd/Google Drive/webutv2_te14/flexbox/sass/holly_grail.sass */
+/* line 10, C:/Users/kroan_000/Desktop/Webbutveckling 2/holly_grail/sass/holly_grail.sass */
 .kontainer main {
   display: flex;
   flex-direction: row;
@@ -16,20 +16,20 @@ body {
   justify-content: center;
   align-content: stretch;
   align-items: stretch; }
-  /* line 18, C:/Users/karryd/Google Drive/webutv2_te14/flexbox/sass/holly_grail.sass */
+  /* line 18, C:/Users/kroan_000/Desktop/Webbutveckling 2/holly_grail/sass/holly_grail.sass */
   .kontainer main .sidebar1 {
     width: 15%;
     background: yellow; }
-  /* line 22, C:/Users/karryd/Google Drive/webutv2_te14/flexbox/sass/holly_grail.sass */
+  /* line 22, C:/Users/kroan_000/Desktop/Webbutveckling 2/holly_grail/sass/holly_grail.sass */
   .kontainer main .text {
     width: 70%;
     background: blue; }
-  /* line 26, C:/Users/karryd/Google Drive/webutv2_te14/flexbox/sass/holly_grail.sass */
+  /* line 26, C:/Users/kroan_000/Desktop/Webbutveckling 2/holly_grail/sass/holly_grail.sass */
   .kontainer main .sidebar2 {
     width: 15%;
     background: yellow; }
 
-/* line 30, C:/Users/karryd/Google Drive/webutv2_te14/flexbox/sass/holly_grail.sass */
+/* line 30, C:/Users/kroan_000/Desktop/Webbutveckling 2/holly_grail/sass/holly_grail.sass */
 .kontainer footer {
   background: orange;
   height: 50px;
