--- a/sass/holly_grail.sass
+++ b/sass/holly_grail.sass
@@ -1,19 +1,25 @@
 body
     background: #555
+    margin: 0
+    padding: 0
 
 .kontainer
     header
         background: orange
         height: 100px
         padding: 20px
+        position: fixed
+        width: 100%
 
     main
-        display:flex
+        display: flex
         flex-direction: row
         flex-wrap: wrap
         justify-content: center
         align-content: stretch
         align-items: stretch
+        padding-top: 140px
+        padding-bottom: 90px
 
         .sidebar1
             width: 15%
@@ -31,4 +37,6 @@ body
         background: orange
         height: 50px
         padding: 20px
-
+        position: fixed
+        bottom: 0
+        width: 100%
